--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,8 +17,19 @@
 			obj.value = "";
 			return false;
 		}
+		if (deleteComma.length > 16) {
+			alert("천조단위 이상은 입력할수 없습니다.");
+			return false;
+		}
+		if (deleteComma.indexOf("0") == 0  && deleteComma.length >= 2) {
+			  alert("0으로 시작하는 숫자는 입력할 수 없습니다. (0원제외)");
+			  obj.value = "";
+			return false;
+		}
+		
 		// 기존에 들어가있던 콤마( , )를 제거한 이 후의 입력값에 다시 콤마( , )를 삽입한다.
 		obj.value = inputNumberWithComma(inputNumberRemoveComma(obj.value));
+		//obj.value = inputNumberWithComma(deleteComma);
 	}
 
 	function inputNumberWithComma(str) {
